[package]
name = "reet-os"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
spin = "0.5.2"
[package.metadata]
kernel_path = "/home/andrey/reet-os/src/kernel.json"
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
