[package]
name = "reet-os"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "reet-os"
test = true
bench = false

[dependencies]
uart_16550 = "0.2.10"





x86_64 = "0.14.10"
pc-keyboard = "0.7.0"
pic8259 = "0.10.1"
bootloader = "0.9"
volatile = "0.2.6"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9"
heapless = "0.7"

[package.metadata]
kernel_path = "/home/andrey/reet-os/src/kernel.json"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
[package.metadata.bootimage]
test-success-exit-code = 33     # (the exit code QEMU uses on success)
test-timeout = 300 
[toolchain]
channel = "nightly"

